# robot_project

./: CODE_REVIEW.md  FULL_MISSION_IMPLEMENTATION_PLAN.md  README.md  RL_MODEL_POLICY_RUN_GUIDE.md  ROBOT_RUN_MANUAL.md
bbox_zone_controller/: README.md  package.xml  setup.cfg  setup.py
bbox_zone_controller/bbox_zone_controller/: __init__.py  bbox_zone_controller_node.py  control_logic.py
bbox_zone_controller/launch/: bbox_zone_drive.launch.py
bbox_zone_controller/test/: test_control_logic.py
cmd_vel_to_motor/: README.md  package.xml  setup.cfg  setup.py
cmd_vel_to_motor/cmd_vel_to_motor/: cmd_vel_to_motor_node.py
cmd_vel_to_motor/launch/: cmd_vel_to_motor.launch.py
keyboard_teleop/: README.md  package.xml  setup.py
keyboard_teleop/keyboard_teleop/: keyboard_teleop_node.py
keyboard_teleop/launch/: keyboard_teleop.launch.py
mission_manager/: README.md  package.xml  setup.py
mission_manager/launch/: camera_mission.launch.py  mission_manager.launch.py  object_pickup_mission.launch.py
mission_manager/mission_manager/: mission_manager_node.py
mission_manager/models/: rl_avoid_search_best.pt
mission_manager_2/: README.md  package.xml  setup.cfg  setup.py
mission_manager_2/config/: mission_manager_2.yaml
mission_manager_2/launch/: mission_manager_2.launch.py
mission_manager_2/mission_manager_2/: __init__.py  mission_logic.py  mission_manager_2_node.py
mission_manager_2/test/: test_mission_logic.py
recording_tools/: README.md  camera2_settings.env  camera_settings.env  record_both.sh  record_once.sh
rl_model_policy/: MODEL_CHECKPOINT_README.md  README.md  package.xml  setup.cfg  setup.py
rl_model_policy/launch/: rl_autonomous_drive.launch.py  rl_model_policy.launch.py  rl_object_world_mapper.launch.py
rl_model_policy/rl_model_policy/: avoidance_roi.py  coverage_controller.py  deterministic_pickup_controller.py  lane_tof_correction.py  leave_start.py  main_road_tof_correction.py  mission_coordinator.py  object_localization.py  object_world_mapper_node.py  observation.py  pickup_trigger.py  rl_model_policy_node.py  storage_exit_tof_correction.py  storage_tof_correction.py  target_activation.py  target_alignment_pd.py  target_approach.py  target_confirmation.py  target_reacquisition.py
rl_model_policy/test/: test_action_filter_configuration.py  test_avoidance_roi.py  test_coverage_controller.py  test_deterministic_pickup_controller.py  test_deterministic_runtime_configuration.py  test_lane_tof_correction.py  test_leave_start.py  test_main_road_tof_correction.py  test_mission_coordinator.py  test_object_localization.py  test_observation.py  test_pickup_trigger.py  test_storage_exit_tof_correction.py  test_storage_tof_correction.py  test_target_activation.py  test_target_alignment_pd.py  test_target_approach.py  test_target_confirmation.py  test_target_reacquisition.py
robot_pose_tracker/: README.md  package.xml  setup.cfg  setup.py
robot_pose_tracker/config/: arena_pose.rviz
robot_pose_tracker/launch/: robot_pose_tracker.launch.py  robot_pose_visualization.launch.py
robot_pose_tracker/robot_pose_tracker/: arena_visualizer_node.py  pose_estimator.py  robot_pose_tracker_node.py
robot_pose_tracker/test/: test_pose_estimator.py
robot_status_gui/: README.md  package.xml  setup.cfg  setup.py
robot_status_gui/config/: distance_normalized_points.csv
robot_status_gui/launch/: robot_status_gui.launch.py
robot_status_gui/robot_status_gui/: object_localization.py  status_gui_node.py  status_model.py
robot_status_gui/test/: test_status_model.py
ros2_yolo_detector/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
ros2_yolo_detector/launch/: v4l2_yolo_camera.launch.py  yolo_camera.launch.py
ros2_yolo_detector/ros2_yolo_detector/: class_id_filter.py  detection_geometry.py  detections_to_target_node.py  frame_correction.py  target_lock.py  temporal_stabilizer.py  yolo_camera_node.py
ros2_yolo_detector/test/: test_class_id_filter.py  test_detection_geometry.py  test_frame_correction.py  test_per_frame_inference.py  test_target_lock.py  test_temporal_stabilizer.py
ros_robot_controller-ros2/ros_robot_controller-ros2/src/ros_robot_controller/ros_robot_controller/: ros_robot_controller_node.py  ros_robot_controller_sdk.py
target_centering/: README.md  package.xml  setup.cfg  setup.py
target_centering/launch/: target_centering.launch.py
target_centering/target_centering/: target_centering_node.py
timed_motion/: README.md  package.xml  setup.cfg  setup.py
timed_motion/launch/: timed_motion.launch.py
timed_motion/timed_motion/: timed_motion_node.py
wall_distance_sensor/: README.md  package.xml  setup.cfg  setup.py
wall_distance_sensor/launch/: wall_alignment_test.launch.py  wall_distance_angle.launch.py
wall_distance_sensor/test/: test_alignment_logic.py  test_vl53l1x_ctypes.py  test_wall_geometry.py
wall_distance_sensor/wall_distance_sensor/: alignment_logic.py  vl53l1x_ctypes.py  vl53l1x_range_node.py  wall_alignment_test_node.py  wall_distance_aggregator_node.py  wall_distance_angle_node.py  wall_geometry.py
