<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bbox_zone_controller</name>
  <version>0.1.0</version>
  <description>Control the robot from the largest YOLO bounding box and four image zones.</description>
  <maintainer email="antero13@todo.todo">antero13</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>cmd_vel_to_motor</exec_depend>
  <exec_depend>ros2_yolo_detector</exec_depend>
  <exec_depend>ros_robot_controller</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
