<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_model_policy</name>
  <version>0.0.1</version>
  <description>Runs deterministic coverage, ROI avoidance, and pickup control.</description>
  <maintainer email="antero13@todo.todo">antero13</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ros_robot_controller_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cmd_vel_to_motor</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>ros2_yolo_detector</exec_depend>
  <exec_depend>ros_robot_controller</exec_depend>
  <exec_depend>robot_pose_tracker</exec_depend>
  <exec_depend>robot_status_gui</exec_depend>
  <exec_depend>wall_distance_sensor</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
