<?xml version="1.0"?>
<package format="3">
  <name>wall_distance_sensor</name>
  <version>0.1.0</version>
  <description>Read two VL53L1X sensors in isolated processes and combine their ranges.</description>
  <maintainer email="user@example.com">AI ROBOT</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
